Fixed footer overflow

--- a/style.css
+++ b/style.css
@@ -5,6 +5,15 @@ body {
   text-align: center;
 }
 
+#page-container {
+  position: relative;
+  min-height: 100vh;
+}
+
+#content {
+  padding-bottom: 2.5rem;
+}
+
 h1 {
   text-transform: uppercase;
   font-size: 5rem;
@@ -39,5 +48,6 @@ input {
 footer {
   position: absolute;
   bottom: 0;
-  width: 99vw;
+  width: 100%;
+  height: 2.5rem;
 }
